--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "gosling-app-sv",
   "version": "0.0.0",
   "license": "MIT",
+  "homepage": "https://sehilyi.github.io/gosling-app-sv",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "yarn build && touch build/.nojekyll && gh-pages -d build -t --git git"
   },
   "dependencies": {
     "gosling.js": "0.9.3",
@@ -18,6 +20,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
   }
