--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "predeploy": "yarn build",
+    "format": "yarn run eslint .eslintrc.js",
     "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
   },
   "dependencies": {
@@ -20,9 +21,19 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.3",
+    "husky": "^7.0.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format && git add ."
+    }
   }
 }
