--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and deploy editor
+name: Build and Deploy
 
 on:
   push:
@@ -6,32 +6,10 @@ on:
   pull_request:
 
 jobs:
-  build:
-    name: Test and build editor
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [ 10.x, 12.x, 14.x ]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn build
-      env:
-        NODE_OPTIONS: '--max_old_space_size=4096'
-  
   deploy:
-    name: Deploy editor
+    name: Deploy App
 
     runs-on: ubuntu-latest
-
-    needs: [ build ]
 
     if: github.ref == 'refs/heads/master'
 
@@ -41,8 +19,7 @@ jobs:
         with:
           node-version: 12
       - run: yarn install
-      - run: yarn build
-      - name: Deploy editor
+      - name: Deploy
         run: |
           git config --global user.name "action@github.com"
           git config --global user.email "GitHub Action"
