--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
   },
   "dependencies": {
-    "gosling.js": "0.9.5",
+    "gosling.js": "^0.9.7",
     "lodash": "^4.17.21",
     "pixi.js": "^6.0.4",
     "react": "^17.0.0",
