--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "predeploy": "yarn build",
-    "format": "yarn run eslint src/ --fix",
+    "format": "eslint src/ --fix",
     "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
   },
   "dependencies": {
-    "gosling.js": "^0.9.7",
+    "gosling.js": "^0.9.8",
     "lodash": "^4.17.21",
     "pixi.js": "^6.0.4",
     "react": "^17.0.0",
@@ -25,9 +25,12 @@
     "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.3",
     "husky": "^4.2.5",
+    "prettier": "^2.4.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
   },
