--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
   },
   "dependencies": {
+    "Buffer": "^0.0.0",
     "gosling.js": "^0.9.8",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "pixi.js": "^6.0.4",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "slugid": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
