--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "path": "^0.12.7",
     "pixi.js": "^6.0.4",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "slugid": "^3.0.0"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
