--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "gosling-app-sv",
-  "version": "0.0.0",
-  "license": "MIT",
-  "homepage": "https://sehilyi.github.io/gosling-app-sv/",
-  "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
-    "predeploy": "yarn build",
-    "format": "eslint src/ --fix",
-    "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
-  },
-  "dependencies": {
-    "Buffer": "^0.0.0",
-    "gosling.js": "^0.9.8",
-    "lodash": "^4.17.21",
-    "path": "^0.12.7",
-    "pixi.js": "^6.0.4",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.24.0",
-    "gh-pages": "^3.2.3",
-    "husky": "^4.2.5",
-    "prettier": "^2.4.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.4.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format && git add ."
+    "name": "gosling-app-sv",
+    "version": "0.0.0",
+    "license": "MIT",
+    "homepage": "https://sehilyi.github.io/gosling-app-sv/",
+    "scripts": {
+        "start": "vite",
+        "build": "tsc && vite build",
+        "serve": "vite preview",
+        "predeploy": "yarn build",
+        "format": "eslint src/ --fix && prettier --write *",
+        "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
+    },
+    "dependencies": {
+        "Buffer": "^0.0.0",
+        "gosling.js": "^0.9.8",
+        "lodash": "^4.17.21",
+        "path": "^0.12.7",
+        "pixi.js": "^6.0.4",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.29.2",
+        "@typescript-eslint/parser": "^4.29.2",
+        "@vitejs/plugin-react-refresh": "^1.3.1",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.24.0",
+        "gh-pages": "^3.2.3",
+        "husky": "^4.2.5",
+        "prettier": "^2.4.1",
+        "typescript": "^4.3.2",
+        "vite": "^2.4.4"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "yarn format && git add ."
+        }
     }
-  }
 }
