--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
     },
     "dependencies": {
+        "@types/react": "^17.0.37",
+        "@types/react-dom": "^17.0.11",
         "Buffer": "^0.0.0",
         "gosling.js": "^0.9.11",
         "lodash": "^4.17.21",
