--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "path": "^0.12.7",
         "pixi.js": "^6.0.4",
         "react": "^17.0.0",
-        "react-dom": "^17.0.0"
+        "react-dom": "^17.0.0",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -35,6 +36,9 @@
         "prettier": "^2.4.1",
         "typescript": "^4.3.2",
         "vite": "^2.4.4"
+    },
+    "resolutions": {
+        "slugid": "^3.0.0"
     },
     "husky": {
         "hooks": {
