--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "lodash": "^4.17.21",
         "path": "^0.12.7",
         "pixi.js": "^6.0.4",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
