--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dependencies": {
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
-        "Buffer": "^0.0.0",
-        "gosling.js": "^0.9.11",
+        "buffer": "^6.0.3",
+        "gosling.js": "^0.9.12",
         "lodash": "^4.17.21",
         "path": "^0.12.7",
         "pixi.js": "^6.0.4",
@@ -35,7 +35,7 @@
         "husky": "^4.2.5",
         "prettier": "^2.4.1",
         "typescript": "^4.3.2",
-        "vite": "^2.4.4"
+        "vite": "^2.7.1"
     },
     "resolutions": {
         "slugid": "^3.0.0"
