feat: add filter for sample by ID

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "serve": "vite preview",
         "predeploy": "yarn build",
         "format": "eslint src/ --fix && prettier --write *",
-        "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git"
+        "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git",
+        "thumbnail": "node src/thumbnails.js"
     },
     "dependencies": {
         "@types/react": "^17.0.37",
