--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://sehilyi.github.io/gosling-app-sv/",
     "scripts": {
         "start": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "serve": "vite preview",
         "predeploy": "yarn build",
         "format": "eslint src/ --fix && prettier --write *",
@@ -36,7 +36,7 @@
         "husky": "^4.2.5",
         "prettier": "^2.4.1",
         "typescript": "^4.3.2",
-        "vite": "^2.7.1"
+        "vite": "^2.9.8"
     },
     "resolutions": {
         "slugid": "^3.0.0"
