chore: add docs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "predeploy": "yarn build",
         "format": "eslint src/ --fix && prettier --write *",
         "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git",
+        "doc-serve": "docsify serve docs",
         "thumbnail": "node src/thumbnails.js"
     },
     "dependencies": {
