doc: add more info about loading external data

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "serve": "vite preview",
         "predeploy": "yarn build",
         "format": "eslint src/ --fix && prettier --write *",
-        "deploy": "touch dist/.nojekyll; gh-pages -d dist -t --git git",
+        "deploy": "touch dist/.nojekyll; cp -R docs dist/docs; gh-pages -d dist -t --git git",
         "doc-serve": "docsify serve docs",
         "thumbnail": "node src/thumbnails.js"
     },
