--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "goscan",
+    "name": "chromoscope",
     "version": "0.0.0",
     "license": "MIT",
-    "homepage": "https://sehilyi.github.io/goscan/",
+    "homepage": "https://hms-dbmi.github.io/chromoscope/",
     "scripts": {
         "start": "vite",
         "build": "vite build",
