--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "vite",
         "build": "vite build",
         "serve": "vite preview",
-        "predeploy": "yarn build",
+        "predeploy": "yarn build; echo \"chromoscope.bio\" >> build/CNAME",
         "format": "eslint src/ --fix && prettier --write *",
         "deploy": "touch dist/.nojekyll; cp -R docs dist/docs; gh-pages -d dist -t --git git",
         "doc-serve": "docsify serve docs",
