chore: release workflow

--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
     "name": "chromoscope",
-    "version": "0.0.0",
+    "version": "0.1.1",
     "license": "MIT",
     "homepage": "https://chromoscope.bio",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hms-dbmi/chromoscope"
+    },
+    "module": "dist/chromoscope.es.js",
     "scripts": {
         "start": "vite",
         "build": "vite build",
+        "build-lib": "vite build --mode lib",
         "serve": "vite preview",
         "predeploy": "yarn build",
         "format": "eslint src/ --fix && prettier --write *",
