--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,13 @@ dist
 dist-ssr
 *.local
 *.swp
+*.log
 *.swo
 *~
 **/gosling-screenshot
 /script/output/
 /overview-specs.json
-
+/lib/
 __pycache__/
 *.egg-info/
 .eggs/*
