--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "chromoscope",
-    "version": "0.0.0",
+    "version": "0.1.1",
     "license": "MIT",
     "homepage": "https://chromoscope.bio",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hms-dbmi/chromoscope"
+    },
     "scripts": {
         "start": "vite",
         "build": "vite build",
