--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     },
     "scripts": {
         "start": "vite",
+        "start-doc": "docsify serve docs",
         "build": "vite build",
         "serve": "vite preview",
         "predeploy": "yarn build; echo \"chromoscope.bio\" >> dist/CNAME",
         "format": "eslint src/ --fix && prettier --write *",
         "deploy": "touch dist/.nojekyll; cp -R docs dist/docs; gh-pages -d dist -t --git git",
-        "doc-serve": "docsify serve docs",
         "thumbnail": "node src/thumbnails.js"
     },
     "dependencies": {
