--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "build": "vite build",
         "build-docs": "yarn --cwd docs install; yarn --cwd docs build",
         "serve": "vite preview",
-        "predeploy": "yarn build; yarn build-docs; mkdir build; echo \"chromoscope.bio\" >> build/CNAME",
+        "predeploy": "yarn build; yarn build-docs; rm -rf build; mkdir build; cp -R docs/build build; echo \"chromoscope.bio\" >> build/CNAME; touch build/.nojekyll; cp -R dist build/app",
         "format": "eslint src/ --fix && prettier --write src/",
-        "deploy": "touch build/.nojekyll; cp -R docs/build build; cp -R dist build/app; gh-pages -d build -t --git git",
+        "deploy": "gh-pages -d build -t --git git",
         "thumbnail": "node src/thumbnails.js"
     },
     "dependencies": {
