chore: switch base URL of docs and app

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "build": "vite build",
         "build-docs": "yarn --cwd docs install; yarn --cwd docs build",
         "serve": "vite preview",
-        "predeploy": "yarn build; yarn build-docs; rm -rf build; mkdir build; cp -R docs/build build; echo \"chromoscope.bio\" >> build/CNAME; touch build/.nojekyll; cp -R dist build/app",
+        "predeploy": "yarn build; yarn build-docs; rm -rf build; cp -R docs/build build; echo \"chromoscope.bio\" >> build/CNAME; touch build/.nojekyll; cp -R dist build/app",
         "format": "eslint src/ --fix && prettier --write src/",
         "deploy": "gh-pages -d build -t --git git",
         "thumbnail": "node src/thumbnails.js"
