--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@docusaurus/core": "2.4.1",
+        "@docusaurus/plugin-google-gtag": "^3.0.0",
         "@docusaurus/preset-classic": "2.4.1",
         "@docusaurus/theme-search-algolia": "^2.4.1",
         "@mdx-js/react": "^1.6.22",
