--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "@types/react-router-dom": "^5.2.0",
+        "bootstrap": "^5.3.3",
         "buffer": "^6.0.3",
         "gosling.js": "^0.17.0",
         "idb": "^7.0.2",
