--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
         "thumbnail": "node src/thumbnails.js"
     },
     "dependencies": {
-        "@types/react": "^17.0.37",
-        "@types/react-dom": "^17.0.11",
+        "@types/react": "^19.1.9",
+        "@types/react-dom": "^19.1.7",
         "@types/react-router-dom": "^5.2.0",
         "bootstrap": "^5.3.3",
         "buffer": "^6.0.3",
-        "gosling.js": "^0.17.0",
+        "gosling.js": "^2.0.0-alpha.1",
         "idb": "^7.0.2",
         "lodash": "^4.17.21",
         "path": "^0.12.7",
         "pixi.js": "^6.0.4",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-router-dom": "^5.2.0",
         "uuid": "^8.3.2"
     },
