--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-router-dom": "^5.2.0",
+        "tar": "3.1.1",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
